#202 shortcut and makes list unmodifiable